k8s/notat-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notat-web
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: notat-web
  template:
    metadata:
      labels:
        app: notat-web
    spec:
      containers:
      - name: notat-web
        image: ghcr.io/teodoran/notes-app/notat-web:sha-f82a06f
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
