k8s/notat-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notat-api
spec:
  type: ClusterIP
  selector:
    app: notat-api
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
