k8s/notat-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notat-web
spec:
  type: ClusterIP
  selector:
    app: notat-web
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
