k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notes-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: <username>.devops.rosbach.no
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              serviceName: notat-api
              servicePort: 8080
          - path: /
            pathType: Prefix
            backend:
              serviceName: notat-web
              servicePort: 80
